added the version to index.html

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
         <title>{{pkgJson.name}}</title>
     </head>
     <body>
-        <p>Welcome To {{pkgJson.name}}!</p>
+        <p>Welcome To {{pkgJson.name}} v{{pkgJson.version}}!</p>
         {{#if loggedIn}}
         <p>You're logged in</p>
         <button id="logout-btn">Log out</button>
