--- a/views/tokenpage.hbs
+++ b/views/tokenpage.hbs
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Error</title>
+        <title>Token page</title>
     </head>
     <body>
-        <p>Shoot! Error {{status}} happenned!</p>
-        <code>{{err}}</code>
+        <p>We're not really supposed to show the token</p>
+        <code>{{data}}</code>
     </body>
 </html>
