--- a/views/safepage.hbs
+++ b/views/safepage.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Login successfull</title>
+        <title>Obtained the code</title>
     </head>
     <body>
         <h1>Logged in to {{name}}</h1>
