show client id on index. fix #3

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,7 @@
         <p>
             Welcome To <a href="https://github.com/schibsted/sdk-example">
             {{pkgJson.name}} v{{pkgJson.version}}</a>!
+            <code>clientId = {{config.clientId}}</code>
         </p>
         {{#if loggedIn}}
         <p>You're logged in</p>
