Fix typo: happenned -> happened

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -5,7 +5,7 @@
         <title>Error</title>
     </head>
     <body>
-        <p>Shoot! Error {{status}} happenned!</p>
+        <p>Shoot! Error {{status}} happened!</p>
         <code>{{err}}</code>
     </body>
 </html>
