--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,8 @@
     <head>
         <meta charset='utf-8'>
         <title>{{pkgJson.name}}</title>
+        <link rel="icon" type="image/png" href="/public/favicon.png">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     </head>
     <body>
@@ -10,7 +12,7 @@
         <nav class="navbar navbar-light bg-faded">
             <div class="d-flex justify-content-between">
                 <a class="navbar-brand p-1" href="https://github.com/schibsted/sdk-example">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/23180/logo-common-components.svg" width="30" height="30" class="d-inline-block align-top mr-1" alt="">
+                    <img src="/public/logo-common-components.svg" width="30" height="30" class="d-inline-block align-top mr-1" alt="">
                     {{pkgJson.name}} v{{pkgJson.version}}
                 </a>
                 <div>
