--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,20 +3,127 @@
     <head>
         <meta charset='utf-8'>
         <title>{{pkgJson.name}}</title>
+        <link rel="icon" type="image/png" href="/public/favicon.png">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     </head>
     <body>
-        <p>
-            Welcome To <a href="https://github.com/schibsted/sdk-example">
-            {{pkgJson.name}} v{{pkgJson.version}}</a>!
-            <code>clientId = {{config.clientId}}</code>
-        </p>
-        {{#if loggedIn}}
-        <p>You're logged in</p>
-        <button id="logout-btn">Log out</button>
-        {{else}}
-        <button id="login-btn">Click here to login</button>
-        <button id="login-async-btn">Click here to login (async)</button>
-        {{/if}}
+
+        <nav class="navbar navbar-light bg-faded">
+            <div class="d-flex justify-content-between">
+                <a class="navbar-brand p-1" href="https://github.com/schibsted/sdk-example">
+                    <img src="/public/logo-common-components.svg" width="30" height="30" class="d-inline-block align-top mr-1" alt="">
+                    {{pkgJson.name}} v{{pkgJson.version}}
+                </a>
+                <div>
+                    {{#if loggedIn}}
+                        <button class="btn btn-secondary" id="logout-btn">Log out</button>
+                    {{else}}
+                        <button class="btn btn-primary" id="login-btn">Login</button>
+                        <button class="btn btn-secondary" id="login-async-btn">Login (async)</button>
+                    {{/if}}
+                </div>
+            </div>
+        </nav>
+
+        <section class="container">
+            
+            {{#if config.clientId}}
+            <div class="alert alert-success mt-4" role="alert">
+                <strong>Well done!</strong> You've logged in to <strong>{{config.clientId}}</strong>.
+            </div>
+            {{/if}}
+            
+            <div class="row">
+                <div class="col my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/1280x600/?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Donec laoreet sagittis nibh</h4>
+                        <p class="card-text">Maecenas dignissim justo sit amet ultricies ultricies. Duis sed ullamcorper eros. Donec nibh lacus, finibus nec urna at, lacinia rutrum.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Quisque eu erat nisl tellus</h4>
+                        <p class="card-text">Nunc nibh magna, bibendum vel pellentesque at, mollis vel nisl.</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Pellentesque habitant morbi</h4>
+                        <p class="card-text">Vivamus efficitur elementum posuere. Ut viverra nunc nec mi.</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Pellentesque habitant morbi</h4>
+                        <p class="card-text">Suspendisse tincidunt ante ac dui malesuada tempus. In mollis neque.</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Suspendisse eu libero</h4>
+                        <p class="card-text">Nam vitae nisl ante. Sed eget nibh ullamcorper, euismod leo.</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Lorem ipsum dolor</h4>
+                        <p class="card-text">Nullam ac finibus purus. Curabitur magna dui, cursus at scelerisque.</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Praesent vestibulum tellus</h4>
+                        <p class="card-text">Praesent nec ligula in nibh pharetra auctor. Nullam imperdiet ex.</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Lorem ipsum dolor</h4>
+                        <p class="card-text">Nullam ac finibus purus. Curabitur magna dui, cursus at scelerisque.</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 my-3">
+                    <div class="card">
+                    <img class="card-img-top img-fluid" src="//placehold.it/500x250?text=&nbsp;">
+                    <div class="card-block">
+                        <h4 class="card-title">Praesent vestibulum tellus</h4>
+                        <p class="card-text">Praesent nec ligula in nibh pharetra auctor. Nullam imperdiet ex.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
+
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="{{config.sdkJsPath}}" charset="utf-8"></script>
         <script>
