Logged in alert

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,7 +29,7 @@
 
         <section class="container">
             
-            {{#if config.clientId}}
+            {{#if loggedIn}}
             <div class="alert alert-success mt-4" role="alert">
                 <strong>Well done!</strong> You've logged in to <strong>{{config.clientId}}</strong>.
             </div>
