Typo: useSessionCluester -> useSessionCluster

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -138,7 +138,7 @@
             var spid = new SPiD.default({
                 serverUrl: '{{config.spidBaseUrl}}',
                 popup: true,
-                useSessionCluester: false,
+                useSessionCluster: false,
                 client_id: '{{config.clientId}}',
                 redirect_uri: window.location.toString()
             });
