hotfix to show the error message online

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -6,6 +6,6 @@
     </head>
     <body>
         <p>Shoot! Error {{status}} happened!</p>
-        <code>{{err}}</code>
+        <code>{{error}}</code>
     </body>
 </html>
