--- a/views/error.hbs
+++ b/views/error.hbs
@@ -7,5 +7,8 @@
     <body>
         <p>Shoot! Error {{status}} happened!</p>
         <code>{{error}}</code>
+        <hr/>
+        <a href="/">Home</a>
+        <button onclick="history.back()">Back</button>
     </body>
 </html>
