header link points to index page

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-faded">
     <div class="d-flex justify-content-between">
-        <a class="navbar-brand p-1" href="https://github.com/schibsted/sdk-example">
+        <a class="navbar-brand p-1" href="/">
             <img src="/public/logo-common-components.svg" width="30" height="30" class="d-inline-block align-top mr-1" alt="Logo">
             <span class="hidden-sm-down">SDK Example</span>
         </a>
