made the login menu a bit more fluent to read

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -12,8 +12,7 @@
                 {{#if loggedIn}}
                     <button class="dropdown-item" id="logout-btn">Log out</button>
                 {{else}}
-                    <button class="dropdown-item" id="login-user-pass">Username &amp; Password</button>
-                    <h6 class="dropdown-header">Passwordless</h6>
+                    <button class="dropdown-item" id="login-user-pass">With User&amp;Pass</button>
                     <button class="dropdown-item" id="login-email">With Email</button>
                     <button class="dropdown-item" id="login-sms">With SMS</button>
                     <div class="dropdown-divider"></div>
