--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -10,6 +10,9 @@
         spidBaseUrl: '{{config.spidBaseUrl}}',
         clientId: '{{config.clientId}}'
     };
+    if (console && console.log) {
+        console.log(JSON.stringify(window.config, undefined, 2));
+    }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js" integrity="sha256-jVfFb7AbGi7S/SLNl8SB4/MYaf549eEs+NlIWMoARHg=" crossorigin="anonymous"></script>
