Whoops. Fix link to safepage.js
Fixes #27

--- a/browser/safepage.hbs
+++ b/browser/safepage.hbs
@@ -9,6 +9,6 @@
         <h1>Logged in!</h1>
         <p>This popup should close immediately.</p>
 
-        <script src="./safepage.js"></script>
+        <script src="./dist/safepage.js"></script>
     </body>
 </html>
