Tweak polyfills for IE11

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -18,7 +18,7 @@
         </script>
         <link rel="stylesheet" href="/browser/index.css" />
         <link rel="icon" href="/browser/favicon.ico" type="image/x-icon" />
-        <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Object.entries"></script>
+        <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Promise,URL,Object.entries,fetch,Array.from,Number.isInteger"></script>
     </head>
 
     <body>
