Default to New Flow

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -33,7 +33,7 @@
     {{/if}}
         <hr/>
         <label><input type="checkbox" id="use-popup"> Popup</label>
-        <label><input type="checkbox" id="use-new-flow"> New Flow</label>
+        <label><input type="checkbox" id="use-new-flow" checked> New Flow</label>
         <br/>
         using
         <label><input type="radio" value="" name="login-method" checked>Credentials</label>
