WIP: session-service poc

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -10,7 +10,9 @@
             window.config = {
                 spidEnv: '{{config.spidEnv}}',
                 clientId: '{{config.clientId}}',
-                exampleProductId: '{{config.exampleProductId}}'
+                exampleProductId: '{{config.exampleProductId}}',
+                oauthBase: '{{config.oauthBase}}',
+                spidBase: '{{config.spidBase}}',
             };
             if (console && console.log) {
                 console.log(JSON.stringify(window.config, undefined, 2));
