--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -13,6 +13,7 @@
                 exampleProductId: '{{config.exampleProductId}}',
                 oauthBase: '{{config.oauthBase}}',
                 spidBase: '{{config.spidBase}}',
+                sessionServiceBase : '{{config.sessionServiceBase}}',
             };
             if (console && console.log) {
                 console.log(JSON.stringify(window.config, undefined, 2));
