Add session-service temp stuff

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -13,6 +13,7 @@
                 exampleProductId: '{{config.exampleProductId}}',
                 oauthBase: '{{config.oauthBase}}',
                 spidBase: '{{config.spidBase}}',
+                hasSessionBase: '{{config.hasSessionBase}}',
                 sessionServiceBase : '{{config.sessionServiceBase}}',
             };
             if (console && console.log) {
