Add hasProduct/hasSubscription checks

--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -90,5 +90,15 @@
             BFF payment flow:
             <button class="buy-promo-code-product">Buy PromoCode Product</button>
         </p>
+        <p class="has-product-container">
+            Product access:
+            <input class="has-product-id" type="text"></input>
+            <button class="has-product">Check</button>
+        </p>
+        <p class="has-subscription-container">
+            Subscription access:
+            <input class="has-subscription-id" type="text"></input>
+            <button class="has-subscription">Check</button>
+        </p>
     </body>
 </html>
