Add footer so it’s easy to see the version

--- a/browser/index.css
+++ b/browser/index.css
@@ -39,3 +39,9 @@ a, a:active, a:visited, a:hover {
 button:hover, button:active {
     background-color: rgb(0, 35, 87);
 }
+
+.footer {
+    font-size: x-small;
+    font-style: italic;
+    color: grey;
+}
