--- a/browser/index.hbs
+++ b/browser/index.hbs
@@ -100,5 +100,6 @@
             <input class="has-subscription-id" type="text"></input>
             <button class="has-subscription">Check</button>
         </p>
+        <p class="footer">Welcome to SDK Example v{{pkgJson.version}}</p>
     </body>
 </html>
